--- a/index.html
+++ b/index.html
@@ -11,12 +11,16 @@
       padding: 0;
     }
 
-    body {
-      font-family: 'Segoe UI', sans-serif;
-      background: #fff;
-      color: #222;
-      line-height: 1.6;
-    }
+    
+	
+	body {
+		background-color: #fff8dc; /* Tereyağ sarısı gibi: açık krem */
+		font-family: "Segoe UI", sans-serif; /* Önerilen sade bir font */
+		color: #222; /* Genel yazı rengi (siyaha yakın koyu gri) */
+		margin: 0;
+		padding: 0;
+	}
+
 
     header, section {
       padding: 60px 20px;
@@ -195,15 +199,15 @@ Ben karmaşık sistemlerin hikâyesini anlatan, onları konuşturan bir mühendi
 
 </p>
     <div class="social-icons">
-      <a href="https://www.linkedin.com/in/senin-linkedin" target="_blank">LinkedIn</a>
-      <a href="https://github.com/senin-github" target="_blank">GitHub</a>
-    </div>
+      <a href="https://www.linkedin.com/in/ernail-h-b76731221" target="_blank">LinkedIn</a>
+          </div>
   </header>
 
   <section id="hakkimda">
     <h2>Hakkımda</h2>
     <p><strong>Eğitim:</strong> [İstanbul Üniversitesi - Cerrahpaşa], Makine Mühendisliği (Lisans)</p>
-    <p><strong>Teknik Alanlar:</strong> Yapısal analiz (FEA/FEM), Akışkanlar mekaniği (CFD), Ansys, SolidWorks, OpenFOAM, Simcenter, Abaqus</p>
+	 <p><strong>Eğitim:</strong> [İstanbul Üniversitesi - Cerrahpaşa], Makine Mühendisliği Anabilim Dalı (Yüksek Lisans)</p>
+    <p><strong>Teknik Alanlar:</strong> Yapısal analiz (FEA/FEM), Akışkanlar mekaniği (CFD), Ansys, SolidWorks, OpenFOAM, Abaqus</p>
     <p><strong>İlgi Alanları:</strong> 3D yazıcılar, drone sistemleri, fotoğrafçılık, yapay zekâ, savunma sanayi, turbojet motor tasarımı</p>
   </section>
 
@@ -227,6 +231,25 @@ Ben karmaşık sistemlerin hikâyesini anlatan, onları konuşturan bir mühendi
       <p>1800 kg’lık bir hava aracı için iniş takımı tasarımı, standartlara uygun hesaplamalar ve yapısal analizler içerdi.</p>
       <a href="https://github.com/senin-github/landing-gear" target="_blank">GitHub'da Görüntüle</a>
     </div>
+	
+	 <div class="project">
+      <h3>Otel Rüzgar Akış Analizi ve Basınç Hesaplama</h3>
+      <p>Otel projesinin CFD rüzgar analizi çevre koşullarını değerlendirerek yapıldı.</p>
+      <a href="https://github.com/senin-github/landing-gear" target="_blank">GitHub'da Görüntüle</a>
+    </div>
+	
+	 <div class="project">
+      <h3>Diş İmplantına Düz ve Açılı Abutment Sonlu Elemanlar Yöntemiyle Hesaplanması</h3>
+      <p>Düz ve açılı abutmentlerde oluşan gerilme ve deformasyon dağılımları hesaplandı..</p>
+      <a href="https://github.com/senin-github/landing-gear" target="_blank">GitHub'da Görüntüle</a>
+    </div>
+	
+	 <div class="project">
+      <h3>Diş Teli Yer Değiştirme Etkisi</h3>
+      <p>Diş telinin maksillar dişler için tasarımı, mekanik model oluşturma ve yapısal analizi</p>
+      <a href="https://github.com/senin-github/landing-gear" target="_blank">GitHub'da Görüntüle</a>
+    </div>
+	
   </section>
 
   <section id="cv">
@@ -238,11 +261,11 @@ Ben karmaşık sistemlerin hikâyesini anlatan, onları konuşturan bir mühendi
 
   <section id="iletisim">
     <h2>İletişim</h2>
-    <p>E-posta: <strong>seninmailin@gmail.com</strong></p>
+    <p>E-posta: <strong>ernail.hakkoymaz@gmail.com</strong></p>
   </section>
 
   <footer>
-    © 2025 Sen – Tüm hakları saklıdır.
+    © 2025 Ernail – Tüm hakları saklıdır.
   </footer>
 
 </body>
