--- a/index.html
+++ b/index.html
@@ -145,57 +145,55 @@
 
   <header id="ana">
     <h1>Sen</h1>
-    <p>
+    <p>🚀 Makine Mühendisi | Yapısal Analiz Uzmanı | Fikirlerin Tornavidası
 
-🚀 Makine Mühendisi | Yapısal Analiz Uzmanı | Fikirlerin Tornavidası
-
-Merhaba, ben Sen – mekanik evrenin şifrelerini çözen, cıvataların sırdaşı, yapısal analizlerin kaşifi bir makine mühendisiyim.
+Merhaba, ben Ernail – mekanik evrenin şifrelerini çözen, cıvataların sırdaşı, yapısal analizlerin kaşifi bir makine mühendisiyim.
 CAD ekranı benim tuvalim, ANSYS ve CFD benim fırçalarım.
 Hesaplamalı mühendisliğe şiir gibi yaklaşırım; FEM mi dedin? Onu hem öğretirim hem çözerim, hem de sabaha kadar tartışırım.
 
-🔧 Ne Yaparım?
+	<p>🔧 Ne Yaparım?
 
-Yapısal Analiz (FEA/FEM): Karmaşık yapıları çözümlerim, stres altında kırılan sistemleri daha doğmadan yakalarım.
+	<p>Yapısal Analiz (FEA/FEM): Karmaşık yapıları çözümlerim, stres altında kırılan sistemleri daha doğmadan yakalarım.
 
-Akışkanlar Dinamiği (CFD): Parçaların arasından geçen havanın bile karakterini bilirim. Vortex mi dönüyor? Ben onu koddan hissederim.
+	<p>Akışkanlar Dinamiği (CFD): Parçaların arasından geçen havanın bile karakterini bilirim. Vortex mi dönüyor? Ben onu koddan hissederim.
 
-Danışmanlık & Eğitmenlik: Bilgimi paylaşmayı severim. Gerçek mühendislik sadece bilmek değil, anlatabilmektir.
+	<p>Danışmanlık & Eğitmenlik: Bilgimi paylaşmayı severim. Gerçek mühendislik sadece bilmek değil, anlatabilmektir.
 
-Sıfırdan Sistem Tasarımı: 24 litrelik mini buzdolabından, teleskopik iniş takımlarına kadar uçuk-kaçık her şeyi çizer, analiz eder, üretilebilir hale getiririm.
-
-
-💻 Araçlarım
-
-ANSYS, SolidWorks, FLUENT, Simcenter, ABAQUS
-
-Python & MATLAB ile mühendislik hesapları
-
-3D yazıcılar ve prototipleme sistemleriyle sahada test
+	<p>Sıfırdan Sistem Tasarımı: 24 litrelik mini buzdolabından, teleskopik iniş takımlarına kadar uçuk-kaçık her şeyi çizer, analiz eder, üretilebilir hale getiririm.
 
 
-😎 Nasıl Biriyim?
+	<p>💻 Araçlarım
 
-Eski usul hesap makinesini hâlâ masasında tutanlardanım ama gözüm hep ileri teknolojide.
+	<p>ANSYS, SolidWorks, FLUENT, Simcenter, ABAQUS
 
-Problem gördüğümde "kim çözer?" demem, sadece "hangi yöntemle çözerim?" derim.
+	<p>Python & MATLAB ile mühendislik hesapları
 
-Karmaşık bir FEM sonucu mu var? Kahvemi alırım, eğrileri düzleştiririm.
-
-Eğitmenlikte sıkmam, tek derdim: "Anlayan değil, anlayan ve uygulayan mühendis yetişsin."
+	<p>3D yazıcılar ve prototipleme sistemleriyle sahada test
 
 
-🌪 Hedefim?
+	<p>😎 Nasıl Biriyim?
 
-Mühendislikte “böyle gelmiş böyle gider”e meydan okumak.
-Hesapların hakkını veren, çizimlerin ruhunu anlayan, sistemleri sadece çözen değil, sorgulayan ve geliştiren bir mühendis olmak.
-Ve... bu yolda yalnız değilim. Öğreten, öğrenen ve birlikte büyüyen bir topluluk oluşturuyorum.
+	<p>Eski usul hesap makinesini hâlâ masasında tutanlardanım ama gözüm hep ileri teknolojide.
+
+	<p>Problem gördüğümde "kim çözer?" demem, sadece "hangi yöntemle çözerim?" derim.
+
+	<p>Karmaşık bir FEM sonucu mu var? Kahvemi alırım, eğrileri düzleştiririm.
+
+	<p>Eğitmenlikte sıkmam, tek derdim: "Anlayan değil, anlayan ve uygulayan mühendis yetişsin."
 
 
----
+	<p>🌪 Hedefim?
 
-İster uçak tasarla, ister buzdolabı. Seninle çözüm var.
-Çünkü ben sadece makine mühendisi değilim…
-Ben karmaşık sistemlerin hikâyesini anlatan, onları konuşturan bir mühendisim.
+	<p>Mühendislikte “böyle gelmiş böyle gider”e meydan okumak.
+	<p>Hesapların hakkını veren, çizimlerin ruhunu anlayan, sistemleri sadece çözen değil, sorgulayan ve geliştiren bir mühendis olmak.
+	<p>Ve... bu yolda yalnız değilim. Öğreten, öğrenen ve birlikte büyüyen bir topluluk oluşturuyorum.
+
+
+
+
+	<p>İster uçak tasarla, ister buzdolabı. Seninle çözüm var.
+	<p>Çünkü ben sadece makine mühendisi değilim…
+	<p>Ben karmaşık sistemlerin hikâyesini anlatan, onları konuşturan bir mühendisim.
 
 </p>
     <div class="social-icons">
