--- a/index.html
+++ b/index.html
@@ -144,12 +144,12 @@
   <div class="spacer"></div>
 
   <header id="ana">
-    <h1>Sen</h1>
+    <h1>Ben Kimim?</h1>
     <p>🚀 Makine Mühendisi | Yapısal Analiz Uzmanı | Fikirlerin Tornavidası
 
-Merhaba, ben Ernail – mekanik evrenin şifrelerini çözen, cıvataların sırdaşı, yapısal analizlerin kaşifi bir makine mühendisiyim.
-CAD ekranı benim tuvalim, ANSYS ve CFD benim fırçalarım.
-Hesaplamalı mühendisliğe şiir gibi yaklaşırım; FEM mi dedin? Onu hem öğretirim hem çözerim, hem de sabaha kadar tartışırım.
+	<p>Merhaba, ben Ernail – mekanik evrenin şifrelerini çözen, cıvataların sırdaşı, yapısal analizlerin kaşifi bir makine mühendisiyim.
+	<p>CAD ekranı benim tuvalim, ANSYS ve CFD benim fırçalarım.
+	<p>Hesaplamalı mühendisliğe şiir gibi yaklaşırım; FEM mi dedin? Onu hem öğretirim hem çözerim, hem de sabaha kadar tartışırım.
 
 	<p>🔧 Ne Yaparım?
 
