--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
 
   <header id="ana">
     <h1>Ben Kimim?</h1>
+	<img src="profil.jpg" alt="Benim fotoğrafım" width="200" style="border-radius: 50%; margin-bottom: 10px;">
     <p>🚀 Makine Mühendisi | Yapısal Analiz Uzmanı | Fikirlerin Tornavidası
 
 	<p>Merhaba, ben Ernail – mekanik evrenin şifrelerini çözen, cıvataların sırdaşı, yapısal analizlerin kaşifi bir makine mühendisiyim.
