--- a/index.html
+++ b/index.html
@@ -1,271 +1,203 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Ernail'in Portfolyo Sitesi</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Ernail | Makine Mühendisi</title>
   <style>
-    * {
-      box-sizing: border-box;
+    body {
       margin: 0;
-      padding: 0;
+      font-family: 'Segoe UI', sans-serif;
+      line-height: 1.6;
+      background-color: #fdfdfd;
     }
 
-    
-	
-	body {
-		background-color: #fff8dc; /* Tereyağ sarısı gibi: açık krem */
-		font-family: "Segoe UI", sans-serif; /* Önerilen sade bir font */
-		color: #222; /* Genel yazı rengi (siyaha yakın koyu gri) */
-		margin: 0;
-		padding: 0;
-	}
+    header {
+      background-color: #fff8dc;
+      position: sticky;
+      top: 0;
+      z-index: 1000;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    }
 
+    .navbar {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 12px 20px;
+    }
 
-    header, section {
-      padding: 60px 20px;
+    .logo {
+      font-size: 1.5em;
+      font-weight: bold;
+    }
+
+    .menu-toggle {
+      display: none;
+      font-size: 24px;
+      background: none;
+      border: none;
+      cursor: pointer;
+    }
+
+    .nav-links {
+      list-style: none;
+      display: flex;
+      gap: 20px;
+    }
+
+    .nav-links li a {
+      text-decoration: none;
+      color: black;
+      font-weight: bold;
+    }
+
+    @media (max-width: 768px) {
+      .menu-toggle {
+        display: block;
+      }
+
+      .nav-links {
+        display: none;
+        flex-direction: column;
+        background-color: #fff8dc;
+        position: absolute;
+        top: 60px;
+        right: 20px;
+        width: 200px;
+        padding: 10px;
+        box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+      }
+
+      .nav-links.open {
+        display: flex;
+      }
+    }
+
+    main {
+      padding: 20px;
       max-width: 900px;
       margin: auto;
     }
 
-    nav {
-      position: fixed;
-      top: 0;
-      width: 100%;
-      background: white;
-      border-bottom: 1px solid #eee;
-      z-index: 1000;
+    img.profile {
+      width: 180px;
+      border-radius: 50%;
+      display: block;
+      margin: 20px auto;
     }
 
-    nav ul {
-      display: flex;
-      justify-content: center;
-      list-style: none;
-      padding: 10px 0;
+    section {
+      margin-bottom: 40px;
     }
 
-    nav ul li {
-      margin: 0 15px;
-    }
-
-    nav ul li a {
-      text-decoration: none;
-      color: #444;
-      font-weight: bold;
-    }
-
-    nav ul li a:hover {
-      color: #0077b6;
-    }
-
-    section h2 {
-      margin-bottom: 20px;
-      font-size: 28px;
-    }
-
-    .social-icons a {
-      margin-right: 15px;
-      font-size: 18px;
-      color: #444;
-      text-decoration: none;
-    }
-
-    .social-icons a:hover {
-      color: #0077b6;
-    }
-
-    .project {
-      margin-bottom: 20px;
-    }
-
-    .project a {
-      display: inline-block;
-      margin-top: 5px;
-      color: #0077b6;
-      text-decoration: none;
-    }
-
-    .project a:hover {
-      text-decoration: underline;
-    }
-
-    .cv-download a {
-      display: inline-block;
-      margin-top: 10px;
-      padding: 10px 15px;
-      background: #0077b6;
-      color: white;
-      text-decoration: none;
-      border-radius: 5px;
-    }
-
-    .cv-download a:hover {
-      background: #005f87;
-    }
-
-    @media (max-width: 600px) {
-      nav ul {
-        flex-direction: column;
-      }
-
-      nav ul li {
-        margin: 10px 0;
-      }
-    }
-
-    html {
-      scroll-behavior: smooth;
+    h1, h2 {
+      color: #333;
     }
 
     footer {
+      background-color: #f3f3f3;
       text-align: center;
-      padding: 30px;
-      color: #999;
-      font-size: 14px;
+      padding: 20px;
+      font-size: 0.9em;
     }
 
-    .spacer {
-      height: 70px;
+    a {
+      color: #0066cc;
     }
   </style>
 </head>
 <body>
 
-  <nav>
-    <ul>
-      <li><a href="#ana">Ana Sayfa</a></li>
-      <li><a href="#hakkimda">Hakkımda</a></li>
-      <li><a href="#projeler">Projeler</a></li>
-      <li><a href="#cv">CV</a></li>
-      <li><a href="#iletisim">İletişim</a></li>
-    </ul>
-  </nav>
-
-  <div class="spacer"></div>
-
-  <header id="ana">
-    <h1>Ben Kimim?</h1>
-	<img src="profil.jpg" alt="Benim fotoğrafım" width="200" style="border-radius: 50%; margin-bottom: 10px;">
-    <p>🚀 Makine Mühendisi | Yapısal Analiz Uzmanı | Fikirlerin Tornavidası
-
-	<p>Merhaba, ben Ernail – mekanik evrenin şifrelerini çözen, cıvataların sırdaşı, yapısal analizlerin kaşifi bir makine mühendisiyim.
-	<p>CAD ekranı benim tuvalim, ANSYS ve CFD benim fırçalarım.
-	<p>Hesaplamalı mühendisliğe şiir gibi yaklaşırım; FEM mi dedin? Onu hem öğretirim hem çözerim, hem de sabaha kadar tartışırım.
-
-	<p>🔧 Ne Yaparım?
-
-	<p>Yapısal Analiz (FEA/FEM): Karmaşık yapıları çözümlerim, stres altında kırılan sistemleri daha doğmadan yakalarım.
-
-	<p>Akışkanlar Dinamiği (CFD): Parçaların arasından geçen havanın bile karakterini bilirim. Vortex mi dönüyor? Ben onu koddan hissederim.
-
-	<p>Danışmanlık & Eğitmenlik: Bilgimi paylaşmayı severim. Gerçek mühendislik sadece bilmek değil, anlatabilmektir.
-
-	<p>Sıfırdan Sistem Tasarımı: 24 litrelik mini buzdolabından, teleskopik iniş takımlarına kadar uçuk-kaçık her şeyi çizer, analiz eder, üretilebilir hale getiririm.
-
-
-	<p>💻 Araçlarım
-
-	<p>ANSYS, SolidWorks, FLUENT, Simcenter, ABAQUS
-
-	<p>Python & MATLAB ile mühendislik hesapları
-
-	<p>3D yazıcılar ve prototipleme sistemleriyle sahada test
-
-
-	<p>😎 Nasıl Biriyim?
-
-	<p>Eski usul hesap makinesini hâlâ masasında tutanlardanım ama gözüm hep ileri teknolojide.
-
-	<p>Problem gördüğümde "kim çözer?" demem, sadece "hangi yöntemle çözerim?" derim.
-
-	<p>Karmaşık bir FEM sonucu mu var? Kahvemi alırım, eğrileri düzleştiririm.
-
-	<p>Eğitmenlikte sıkmam, tek derdim: "Anlayan değil, anlayan ve uygulayan mühendis yetişsin."
-
-
-	<p>🌪 Hedefim?
-
-	<p>Mühendislikte “böyle gelmiş böyle gider”e meydan okumak.
-	<p>Hesapların hakkını veren, çizimlerin ruhunu anlayan, sistemleri sadece çözen değil, sorgulayan ve geliştiren bir mühendis olmak.
-	<p>Ve... bu yolda yalnız değilim. Öğreten, öğrenen ve birlikte büyüyen bir topluluk oluşturuyorum.
-
-
-
-
-	<p>İster uçak tasarla, ister buzdolabı. Seninle çözüm var.
-	<p>Çünkü ben sadece makine mühendisi değilim…
-	<p>Ben karmaşık sistemlerin hikâyesini anlatan, onları konuşturan bir mühendisim.
-
-</p>
-    <div class="social-icons">
-      <a href="https://www.linkedin.com/in/ernail-h-b76731221" target="_blank">LinkedIn</a>
-          </div>
+  <header>
+    <nav class="navbar">
+      <div class="logo">Ernail</div>
+      <button class="menu-toggle" onclick="toggleMenu()">☰</button>
+      <ul class="nav-links" id="navLinks">
+        <li><a href="#anasayfa">Ana Sayfa</a></li>
+        <li><a href="#hakkimda">Hakkımda</a></li>
+        <li><a href="#projeler">Projeler</a></li>
+        <li><a href="#cv">CV</a></li>
+        <li><a href="#iletisim">İletişim</a></li>
+      </ul>
+    </nav>
   </header>
 
-  <section id="hakkimda">
-    <h2>Hakkımda</h2>
-    <p><strong>Eğitim:</strong> [İstanbul Üniversitesi - Cerrahpaşa], Makine Mühendisliği (Lisans)</p>
-	 <p><strong>Eğitim:</strong> [İstanbul Üniversitesi - Cerrahpaşa], Makine Mühendisliği Anabilim Dalı (Yüksek Lisans)</p>
-    <p><strong>Teknik Alanlar:</strong> Yapısal analiz (FEA/FEM), Akışkanlar mekaniği (CFD), Ansys, SolidWorks, OpenFOAM, Abaqus</p>
-    <p><strong>İlgi Alanları:</strong> 3D yazıcılar, drone sistemleri, fotoğrafçılık, yapay zekâ, savunma sanayi, turbojet motor tasarımı</p>
-  </section>
+  <main>
+    <section id="anasayfa">
+      <h1>Ben Kimim?</h1>
+      <img src="foto.jpg" alt="Benim fotoğrafım" class="profile" />
+      <p>🚀 Makine Mühendisi | Yapısal Analiz Uzmanı | Fikirlerin Tornavidası</p>
 
-  <section id="projeler">
-    <h2>Projeler</h2>
+      <p>Merhaba, ben Ernail – mekanik evrenin şifrelerini çözen, cıvataların sırdaşı, yapısal analizlerin kaşifi bir makine mühendisiyim.</p>
 
-    <div class="project">
-      <h3>Drone CFD Simülasyonu</h3>
-      <p>Bir drone gövdesi için Ansys Fluent ile aerodinamik analiz gerçekleştirildi. Türbülans modeli, mesh kalitesi ve akış karakteristiği optimize edildi.</p>
-      <a href="https://github.com/senin-github/drone-cfd" target="_blank">GitHub'da Görüntüle</a>
-    </div>
+      <p>CAD ekranı benim tuvalim, ANSYS ve CFD benim fırçalarım. Hesaplamalı mühendisliğe şiir gibi yaklaşırım; FEM mi dedin? Onu hem öğretirim hem çözerim, hem de sabaha kadar tartışırım.</p>
+    </section>
 
-    <div class="project">
-      <h3>Mini Rüzgar Tüneli Tasarımı</h3>
-      <p>Hot Wheels arabaları için görsel dumanla akış davranışını inceleyen küçük ölçekli bir rüzgar tüneli tasarımı yapıldı.</p>
-      <a href="https://github.com/senin-github/mini-windtunnel" target="_blank">GitHub'da Görüntüle</a>
-    </div>
+    <section id="hakkimda">
+      <h2>🔧 Ne Yaparım?</h2>
+      <ul>
+        <li><strong>Yapısal Analiz (FEA/FEM):</strong> Karmaşık yapıları çözümlerim, stres altında kırılan sistemleri daha doğmadan yakalarım.</li>
+        <li><strong>Akışkanlar Dinamiği (CFD):</strong> Parçaların arasından geçen havanın bile karakterini bilirim. Vortex mi dönüyor? Ben onu koddan hissederim.</li>
+        <li><strong>Danışmanlık & Eğitmenlik:</strong> Bilgimi paylaşmayı severim. Gerçek mühendislik sadece bilmek değil, anlatabilmektir.</li>
+        <li><strong>Sıfırdan Sistem Tasarımı:</strong> 24 litrelik mini buzdolabından, teleskopik iniş takımlarına kadar uçuk-kaçık her şeyi çizer, analiz eder, üretilebilir hale getiririm.</li>
+      </ul>
 
-    <div class="project">
-      <h3>Telescopic Landing Gear Hesaplama</h3>
-      <p>1800 kg’lık bir hava aracı için iniş takımı tasarımı, standartlara uygun hesaplamalar ve yapısal analizler içerdi.</p>
-      <a href="https://github.com/senin-github/landing-gear" target="_blank">GitHub'da Görüntüle</a>
-    </div>
-	
-	 <div class="project">
-      <h3>Otel Rüzgar Akış Analizi ve Basınç Hesaplama</h3>
-      <p>Otel projesinin CFD rüzgar analizi çevre koşullarını değerlendirerek yapıldı.</p>
-      <a href="https://github.com/senin-github/landing-gear" target="_blank">GitHub'da Görüntüle</a>
-    </div>
-	
-	 <div class="project">
-      <h3>Diş İmplantına Düz ve Açılı Abutment Sonlu Elemanlar Yöntemiyle Hesaplanması</h3>
-      <p>Düz ve açılı abutmentlerde oluşan gerilme ve deformasyon dağılımları hesaplandı..</p>
-      <a href="https://github.com/senin-github/landing-gear" target="_blank">GitHub'da Görüntüle</a>
-    </div>
-	
-	 <div class="project">
-      <h3>Diş Teli Yer Değiştirme Etkisi</h3>
-      <p>Diş telinin maksillar dişler için tasarımı, mekanik model oluşturma ve yapısal analizi</p>
-      <a href="https://github.com/senin-github/landing-gear" target="_blank">GitHub'da Görüntüle</a>
-    </div>
-	
-  </section>
+      <h2>💻 Araçlarım</h2>
+      <p>ANSYS, SolidWorks, FLUENT, Simcenter, ABAQUS<br/>
+         Python & MATLAB ile mühendislik hesapları<br/>
+         3D yazıcılar ve prototipleme sistemleriyle sahada test</p>
 
-  <section id="cv">
-    <h2>CV</h2>
-    <div class="cv-download">
-      <a href="https://github.com/senin-github/portfolio/blob/main/cv.pdf" target="_blank">CV'yi İndir (PDF)</a>
-    </div>
-  </section>
+      <h2>😎 Nasıl Biriyim?</h2>
+      <p>Eski usul hesap makinesini hâlâ masasında tutanlardanım ama gözüm hep ileri teknolojide. Problem gördüğümde "kim çözer?" demem, sadece "hangi yöntemle çözerim?" derim.</p>
+      <p>Karmaşık bir FEM sonucu mu var? Kahvemi alırım, eğrileri düzleştiririm.</p>
+      <p>Eğitmenlikte sıkmam, tek derdim: "Anlayan değil, anlayan ve uygulayan mühendis yetişsin."</p>
 
-  <section id="iletisim">
-    <h2>İletişim</h2>
-    <p>E-posta: <strong>ernail.hakkoymaz@gmail.com</strong></p>
-  </section>
+      <h2>🌪 Hedefim?</h2>
+      <p>Mühendislikte “böyle gelmiş böyle gider”e meydan okumak. Hesapların hakkını veren, çizimlerin ruhunu anlayan, sistemleri sadece çözen değil, sorgulayan ve geliştiren bir mühendis olmak.</p>
+      <p>Ve... bu yolda yalnız değilim. Öğreten, öğrenen ve birlikte büyüyen bir topluluk oluşturuyorum.</p>
+    </section>
+
+    <section id="projeler">
+      <h2>Projeler</h2>
+      <ul>
+        <li><strong>Drone CFD Simülasyonu:</strong> Ansys Fluent ile aerodinamik analiz | <a href="#">GitHub'da Görüntüle</a></li>
+        <li><strong>Mini Rüzgar Tüneli:</strong> Görsel duman akışı için küçük tünel tasarımı | <a href="#">GitHub'da Görüntüle</a></li>
+        <li><strong>İniş Takımı Analizi:</strong> 1800 kg’lık hava aracı için iniş takımı hesapları | <a href="#">GitHub'da Görüntüle</a></li>
+        <li><strong>Otel Rüzgar Akış Analizi:</strong> Çevresel CFD değerlendirmesi | <a href="#">GitHub'da Görüntüle</a></li>
+        <li><strong>Diş İmplantı Analizi:</strong> Açılı abutment'larda gerilme dağılımları | <a href="#">GitHub'da Görüntüle</a></li>
+        <li><strong>Diş Teli Yer Değiştirme:</strong> Maksiller dişler için yapısal analiz | <a href="#">GitHub'da Görüntüle</a></li>
+      </ul>
+    </section>
+
+    <section id="cv">
+      <h2>CV</h2>
+      <p>Eğitim:</p>
+      <ul>
+        <li>[İstanbul Üniversitesi - Cerrahpaşa], Makine Mühendisliği (Lisans)</li>
+        <li>[İstanbul Üniversitesi - Cerrahpaşa], Makine Mühendisliği Anabilim Dalı (Yüksek Lisans)</li>
+      </ul>
+
+      <p>Teknik Alanlar: Yapısal analiz (FEA/FEM), Akışkanlar mekaniği (CFD), Ansys, SolidWorks, OpenFOAM, Abaqus</p>
+      <p>İlgi Alanları: 3D yazıcılar, drone sistemleri, fotoğrafçılık, yapay zekâ, savunma sanayi, turbojet motor tasarımı</p>
+      <p><a href="#">CV'yi İndir (PDF)</a></p>
+    </section>
+
+    <section id="iletisim">
+      <h2>İletişim</h2>
+      <p>E-posta: <a href="mailto:ernail.hakkoymaz@gmail.com">ernail.hakkoymaz@gmail.com</a></p>
+      <p>LinkedIn: <a href="#">LinkedIn Profilim</a></p>
+    </section>
+  </main>
 
   <footer>
     © 2025 Ernail – Tüm hakları saklıdır.
   </footer>
 
+  <script>
+    function toggleMenu() {
+      document.getElementById('navLinks').classList.toggle('open');
+    }
+  </script>
 </body>
 </html>
