--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     }
 
     header {
-      background-color: #fff8dc;
+      background-color: #f4ff7a;
       position: sticky;
       top: 0;
       z-index: 1000;
@@ -96,7 +96,7 @@
     }
 
     footer {
-      background-color: #f3f3f3;
+      background-color: #f4ff7a;
       text-align: center;
       padding: 20px;
       font-size: 0.9em;
@@ -111,7 +111,7 @@
 
   <header>
     <nav class="navbar">
-      <div class="logo">Ernail</div>
+      <div class="logo">Ernail Hakkoymaz</div>
       <button class="menu-toggle" onclick="toggleMenu()">☰</button>
       <ul class="nav-links" id="navLinks">
         <li><a href="#anasayfa">Ana Sayfa</a></li>
@@ -127,7 +127,7 @@
     <section id="anasayfa">
       <h1>Ben Kimim?</h1>
       <img src="foto.jpg" alt="Benim fotoğrafım" class="profile" />
-      <p>🚀 Makine Mühendisi | Yapısal Analiz Uzmanı | Fikirlerin Tornavidası</p>
+      <p>🚀 Makine Mühendisi | Yapısal Analiz Uzmanı | Fikirlerin Anahtarı</p>
 
       <p>Merhaba, ben Ernail – mekanik evrenin şifrelerini çözen, cıvataların sırdaşı, yapısal analizlerin kaşifi bir makine mühendisiyim.</p>
 
@@ -174,8 +174,8 @@
       <h2>CV</h2>
       <p>Eğitim:</p>
       <ul>
-        <li>[İstanbul Üniversitesi - Cerrahpaşa], Makine Mühendisliği (Lisans)</li>
-        <li>[İstanbul Üniversitesi - Cerrahpaşa], Makine Mühendisliği Anabilim Dalı (Yüksek Lisans)</li>
+        <li>İstanbul Üniversitesi - Cerrahpaşa, Makine Mühendisliği (Lisans)</li>
+        <li>İstanbul Üniversitesi - Cerrahpaşa, Makine Mühendisliği Anabilim Dalı (Yüksek Lisans)</li>
       </ul>
 
       <p>Teknik Alanlar: Yapısal analiz (FEA/FEM), Akışkanlar mekaniği (CFD), Ansys, SolidWorks, OpenFOAM, Abaqus</p>
@@ -186,7 +186,7 @@
     <section id="iletisim">
       <h2>İletişim</h2>
       <p>E-posta: <a href="mailto:ernail.hakkoymaz@gmail.com">ernail.hakkoymaz@gmail.com</a></p>
-      <p>LinkedIn: <a href="#">LinkedIn Profilim</a></p>
+      <p>LinkedIn: <a href="https://www.linkedin.com/in/ernail-h-b76731221">LinkedIn Profilim</a></p>
     </section>
   </main>
 
